--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -32,7 +32,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jTabbedPane1" min="-2" pref="663" max="-2" attributes="0"/>
+          <Component id="jTabbedPane1" alignment="0" pref="663" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -189,7 +189,7 @@
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="0" pref="678" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="689" max="32767" attributes="0"/>
                                   <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -345,7 +345,7 @@
                                           </Group>
                                       </Group>
                                   </Group>
-                                  <EmptySpace pref="486" max="32767" attributes="0"/>
+                                  <EmptySpace pref="497" max="32767" attributes="0"/>
                                   <Component id="jLabel27" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                               </Group>
@@ -401,7 +401,7 @@
                                       </Group>
                                       <Component id="labelBienvenido" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace pref="439" max="32767" attributes="0"/>
+                                  <EmptySpace pref="450" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -1059,7 +1059,7 @@
                                   </Group>
                               </Group>
                               <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                              <Component id="jScrollPane1" pref="793" max="32767" attributes="0"/>
+                              <Component id="jScrollPane1" pref="804" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -1999,7 +1999,7 @@
                               <Component id="jPanel9" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="557" max="32767" attributes="0"/>
+                          <EmptySpace pref="568" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -2274,11 +2274,11 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jPanel15" max="32767" attributes="0"/>
                           <Component id="panelTabla" max="32767" attributes="0"/>
+                          <Component id="jPanel15" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -2290,8 +2290,8 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jPanel15" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="panelTabla" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="panelTabla" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -2318,7 +2318,7 @@
                               <Component id="jLabel32" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="labelDetalle" alignment="0" min="-2" pref="627" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="326" max="32767" attributes="0"/>
                           <Component id="btnVerInfo" min="-2" pref="280" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -2400,7 +2400,7 @@
                       <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jScrollPane7" pref="1228" max="32767" attributes="0"/>
+                              <Component id="jScrollPane7" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
                                   <Component id="panelPaginacion" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -2461,7 +2461,7 @@
                               <Component id="panelPaginacion" max="32767" attributes="0"/>
                               <Component id="btnUpdateTablaH" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="62" max="32767" attributes="0"/>
+                          <EmptySpace pref="58" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -2720,7 +2720,7 @@
                               <Component id="jLabel28" min="-2" max="-2" attributes="0"/>
                               <Component id="jPanel14" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="189" max="32767" attributes="0"/>
+                          <EmptySpace pref="200" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
